--- a/style.css
+++ b/style.css
@@ -26,11 +26,11 @@ body {
     background: #354f68;
     color: white;
     padding: 20px;
-    text-align: center;
+    text-align: left;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
     height: 100%;
 }
 
@@ -39,11 +39,14 @@ body {
     height: 150px;
     border-radius: 50%;
     border: 3px solid white;
+    align-self: center;
 }
 
 .left-section h2 {
     font-size: 24px;
     margin-top: 10px;
+    text-align: center;
+    align-self: center;
 }
 
 /* Data Pribadi */
@@ -51,10 +54,11 @@ body {
     text-align: left;
     margin-top: 20px;
     width: 100%;
+    padding-left: 0;
 }
 
 .profile h3 {
-    text-align: center;
+    text-align: left;
     font-size: 18px;
     margin-bottom: 10px;
 }
@@ -63,16 +67,20 @@ body {
 .nama-container {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+    width: 100%;
 }
 
 .nama-container p {
-    margin: 0; /* Hilangkan margin berlebih */
+    margin: 2px 0;
     font-size: 16px;
+    padding-left: 0;
 }
 
 .nama-container .label {
     font-weight: bold;
-    margin-bottom: 2px; /* Atur jarak kecil di bawah label */
+    margin-bottom: 2px;
 }
 
 .nama-container .value {
@@ -115,3 +123,22 @@ li {
     padding: 8px 0;
     font-size: 16px;
 }
+
+
+.riwayat-container ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
+.riwayat-container li {
+    padding: 8px 0;
+    border-bottom: 1px solid #110e0e;
+}
+
+.riwayat-container li:last-child {
+    border-bottom: 1px solid #110e0e; /* Tambahkan border bawah kembali */
+}
+
+
