--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ body {
 /* Bagian kiri */
 .left-section {
     width: 35%;
-    background: #354f68;
+    background: linear-gradient(135deg, #394472, #2575fc);
     color: white;
     padding: 20px;
-    text-align: left;
+    text-align: center; /* Untuk memusatkan teks */
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items: center; /* Pusatkan elemen secara horizontal */
+    justify-content: center; /* Pusatkan elemen secara vertikal */
     height: 100%;
 }
 
@@ -39,8 +39,9 @@ body {
     height: 150px;
     border-radius: 50%;
     border: 3px solid white;
-    align-self: center;
+    margin-bottom: 15px; /* Memberi sedikit jarak dengan elemen lain */
 }
+
 
 .left-section h2 {
     font-size: 24px;
